--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="utf-8">
     <title>My First Bitstarter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
+    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">    
+    <script src="./My First Bitstarter_files/startup_code_jquery.js"></script><style type="text/css"></style>
+    <script src="./My First Bitstarter_files/startup_code_bootstrap.js"></script>
+    <link href="./My First Bitstarter_files/css" rel="stylesheet" type="text/css">
+    <link href="./My First Bitstarter_files/css(1)" rel="stylesheet" type="text/css">
     <link href="assets/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
-    
     <style type="text/css">
       /* Large desktop */
       @media (min-width: 980px) { 
