fixed broken links

--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
-    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">    
-    <script src="./My First Bitstarter_files/startup_code_jquery.js"></script><style type="text/css"></style>
-    <script src="./My First Bitstarter_files/startup_code_bootstrap.js"></script>
-    <link href="./My First Bitstarter_files/css" rel="stylesheet" type="text/css">
-    <link href="./My First Bitstarter_files/css(1)" rel="stylesheet" type="text/css">
-    <link href="assets/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
+    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <script src="/assets/bootstrap/js/bootstrap.js"></script>
+    <link href="/assets/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
     <style type="text/css">
       /* Large desktop */
       @media (min-width: 980px) { 
@@ -110,12 +108,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="https://spark-public.s3.amazonaws.com/startup/code/bitstarter-hw4.html#">Bitstarter</a>
+          <a class="brand" href="http://powerful-beyond-1747.herokuapp.com/index.html#">Bitstarter</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="https://spark-public.s3.amazonaws.com/startup/code/bitstarter-hw4.html#">Home</a></li>
-              <li><a href="https://spark-public.s3.amazonaws.com/startup/code/bitstarter-hw4.html#about">About</a></li>
-              <li><a href="https://spark-public.s3.amazonaws.com/startup/code/bitstarter-hw4.html#contact">Contact</a></li>
+              <li class="active"><a href="http://powerful-beyond-1747.herokuapp.com/index.html#">Home</a></li>
+              <li><a href="http://powerful-beyond-1747.herokuapp.com/index.html#about">About</a></li>
+              <li><a href="http://powerful-beyond-1747.herokuapp.com/index.html#contact">Contact</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -143,7 +141,7 @@
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="./My First Bitstarter_files/480x300">
+          <img class="img-polaroid" src="http://placehold.it/480x300">
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
@@ -198,7 +196,7 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="./My First Bitstarter_files/480x300">
+          <img class="img-polaroid" src="http://placehold.it/480x300">
         </div>
         <div class="span5 copy">
           <p>
@@ -234,7 +232,7 @@
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="./My First Bitstarter_files/480x300">
+          <img class="img-polaroid" src="http://placehold.it/480x300">
         </div>
       </div>
 
