updated nav bar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="/assets/bootstrap/js/bootstrap.js"></script>
-    <link href="/assets/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="/assets/bootstrap/css/bootstrap.css" rel="stylesheet">
     <style type="text/css">
       /* Large desktop */
       @media (min-width: 980px) { 
@@ -108,12 +108,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="http://powerful-beyond-1747.herokuapp.com/index.html#">Bitstarter</a>
+          <a class="brand" href="http://powerful-beyond-1747.herokuapp.com/">Bitstarter</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="http://powerful-beyond-1747.herokuapp.com/index.html#">Home</a></li>
-              <li><a href="http://powerful-beyond-1747.herokuapp.com/index.html#about">About</a></li>
-              <li><a href="http://powerful-beyond-1747.herokuapp.com/index.html#contact">Contact</a></li>
+              <li class="active"><a href="http://powerful-beyond-1747.herokuapp.com/">Home</a></li>
+              <li><a href="http://powerful-beyond-1747.herokuapp.com/">About</a></li>
+              <li><a href="http://powerful-beyond-1747.herokuapp.com/">Contact</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
