added increscent images

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="/assets/bootstrap/js/bootstrap.js"></script>
     <link href="/assets/bootstrap/css/bootstrap.css" rel="stylesheet">
+
+    <!-- favicon -->
+    <link rel="icon" type="image/ico" href="http://powerful-beyond-1747.herokuapp.com/assets/images/favicon.ico"/>
+
     <style type="text/css">
       /* Large desktop */
       @media (min-width: 980px) { 
@@ -136,12 +140,12 @@
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">ask a question. ignite a mind.</p>
+          <p class="lead">ask a question. spark a mind.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="">
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
@@ -196,7 +200,7 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="assets/images/increscent_480x300.png">
         </div>
         <div class="span5 copy">
           <p>
