--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-    <script src="/assets/bootstrap/js/bootstrap.js"></script>
-    <link href="/assets/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <script src="./assets/bootstrap/js/bootstrap.js"></script>
+    <link href="./assets/bootstrap/css/bootstrap.css" rel="stylesheet">
 
     <!-- favicon -->
-    <link rel="icon" type="image/ico" href="http://powerful-beyond-1747.herokuapp.com/assets/images/favicon.ico"/>
+    <link rel="icon" type="image/ico" href="./assets/images/favicon.ico"/>
 
     <style type="text/css">
       /* Large desktop */
@@ -145,7 +145,7 @@
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="">
+          <img class="img-polaroid" src="./assets/images/increscent_480x300.png">
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
@@ -200,7 +200,7 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="assets/images/increscent_480x300.png">
+          <img class="img-polaroid" src="./assets/images/increscent_480x300.png">
         </div>
         <div class="span5 copy">
           <p>
