--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-    <script src="http://ec2-54-215-145-82.us-west-1.compute.amazonaws.com/assets/bootstrap/js/bootstrap.js"></script>
-    <link href="http://ec2-54-215-145-82.us-west-1.compute.amazonaws.com/assets/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <script src="./assets/bootstrap/js/bootstrap.js"></script>
+    <link href="./assets/bootstrap/css/bootstrap.css" rel="stylesheet">
 
     <!-- favicon -->
-    <link rel="icon" type="image/ico" href="http://ec2-54-215-145-82.us-west-1.compute.amazonaws.com/assets/images/favicon.ico"/>
+    <link rel="icon" type="image/ico" href="./assets/images/favicon.ico"/>
 
     <style type="text/css">
       /* Large desktop */
@@ -112,12 +112,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="http://powerful-beyond-1747.herokuapp.com/">Bitstarter</a>
+          <a class="brand" href="/">Bitstarter</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="http://powerful-beyond-1747.herokuapp.com/">Home</a></li>
-              <li><a href="http://powerful-beyond-1747.herokuapp.com/">About</a></li>
-              <li><a href="http://powerful-beyond-1747.herokuapp.com/">Contact</a></li>
+              <li class="active"><a href="/">Home</a></li>
+              <li><a href="/">About</a></li>
+              <li><a href="/">Contact</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -145,7 +145,7 @@
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://ec2-54-215-145-82.us-west-1.compute.amazonaws.com/assets/images/increscent_480x300.png">
+          <img class="img-polaroid" src="./assets/images/increscent_480x300.png">
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
@@ -200,7 +200,7 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://ec2-54-215-145-82.us-west-1.compute.amazonaws.com/assets/images/increscent_480x300.png">
+          <img class="img-polaroid" src="./assets/images/increscent_480x300.png">
         </div>
         <div class="span5 copy">
           <p>
