--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
         </div>
       </div>
       <div class="row-fluid pitch">
-        <div class="span5 offset1 video">
-          <img class="img-polaroid" src="./assets/images/increscent_480x300.png">
+        <div class="span5">
+          <img class="img-polaroid" src="http://placehold.it/480x300">
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
