--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>increscent</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="http://robertwilliams.tk:8080/assets/bootstrap/css/bootstrap.css" rel="stylesheet">
-<link href="http://robertwilliams.tk:8080/assets/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="/assets/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="/assets/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
 
@@ -18,7 +18,7 @@
 
 
     <!-- favicon -->
-    <link rel="icon" type="image/ico" href="http://robertwilliams.tk:8080/assets/images/favicon.ico">
+    <link rel="icon" type="image/ico" href="/assets/images/favicon.ico">
     <style type="text/css">
 
       /* Large desktop */
